--- a/index.html
+++ b/index.html
@@ -11,18 +11,7 @@
 
     <body>
       <div class = "container">
-        <div class = "container1">
-          <section class = "box headName">
-            <div class = "box logo">
-              <img src = "images/logoUdacity.svg" alt = "Logo Udasity">
-            </div>
-            <div class = "box myName">
-              <h2>Anna Moskalchuk<br>FRONT-END-NINJA</h2>
-            </div>
-            <!--<img src = "images/me.jpg" alt = "photo of me">-->
-          </section>
-        </div>
-        <section class = "box navSmall">
+      <section class = "box navSmall">
           <h4>Links</h4>
           <ul class = "box list">
             <li class = "">
@@ -36,13 +25,23 @@
             </li>
           </ul>
         </section>
+        <div class = "container2">
+          <section class = "box topBlock">
+            <div class = "box logo">
+              <img src = "images/logoUdacity.svg" alt = "Logo Udasity">
+            </div>
+            <div class = "box myName">
+              <h2>Anna Moskalchuk<br>FRONT-END-NINJA</h2>
+            </div>
+            <!--<img src = "images/me.jpg" alt = "photo of me">-->
+          </section>
         <div class = "box imageCenter">
           <img src = "images/me.jpg" alt = "Background picture">
         </div>
         <div class = "box work">
           <h3 class = "work">Featured Work</h3>
         </div>
-        <div class = "container2">
+        <div class = "bottomLinks">
           <ul class = "box listFeaturedWork">
             <li class = "">
               <a href = "http://github.com/udasity/Appify/">APPIFY</a>
@@ -54,6 +53,7 @@
               <a href = "http://github.com/udasity/Bokeh">BOKEH</a>
             </li>
           </ul>
+        </div>
         </div>
       </div>
     </body>
