--- a/index.html
+++ b/index.html
@@ -2,59 +2,90 @@
 <html>
 
   <head>
+
     <title>Resume</title>
     <meta charset = "utf-8">
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
     <link rel = "stylesheet" href = "css/main.css">
     <link rel = "stylesheet" href = "css/responsive.css">
+
   </head>
 
-    <body>
-      <div class = "container">
+  <body>
+
+    <div class = "container">
+
       <section class = "box navSmall">
-          <h4>Links</h4>
-          <ul class = "box list">
-            <li class = "">
-              <a href = "">News</a>
-            </li>
-            <li class = "">
-              <a href = "">Hobbies</a>
-            </li>
-            <li class = "">
-              <a href = "">Works</a>
-            </li>
-          </ul>
+
+        <h4>Links</h4>
+
+        <ul class = "box list">
+
+          <li class = "">
+            <a href = "">News</a>
+          </li>
+
+          <li class = "">
+            <a href = "">Hobbies</a>
+          </li>
+
+          <li class = "">
+            <a href = "">Works</a>
+          </li>
+
+        </ul>
+
+      </section>
+
+      <div class = "container2">
+
+        <section class = "box topBlock">
+
+          <div class = "box logo">
+            <img class = "imgLogo" src = "images/logoUdacity.svg" alt = "Logo Udasity">
+          </div>
+
+          <div class = "box myName">
+            <h2>Anna Moskalchuk<br>FRONT-END-NINJA</h2>
+          </div>
+
         </section>
-        <div class = "container2">
-          <section class = "box topBlock">
-            <div class = "box logo">
-              <img src = "images/logoUdacity.svg" alt = "Logo Udasity">
-            </div>
-            <div class = "box myName">
-              <h2>Anna Moskalchuk<br>FRONT-END-NINJA</h2>
-            </div>
-            <!--<img src = "images/me.jpg" alt = "photo of me">-->
-          </section>
+
         <div class = "box imageCenter">
-          <img src = "images/me.jpg" alt = "Background picture">
+          <img class = "box backImg" src = "images/flowers.jpg" alt = "Background picture">
         </div>
+
         <div class = "box work">
           <h3 class = "work">Featured Work</h3>
         </div>
-        <div class = "bottomLinks">
-          <ul class = "box listFeaturedWork">
-            <li class = "">
-              <a href = "http://github.com/udasity/Appify/">APPIFY</a>
+
+        <div class = "box bottomLinks">
+
+          <ul class = "box listWorks">
+
+            <li class = "box project">
+              <img class = "box pictBottom" src = "images/braslet.jpg" alt = "Photo of bracelets">
+              <a href = "">Hobby</a>
             </li>
-            <li class = "">
-              <a href = "http://github.com/udasity/Sunflower">SUNFLOWER</a>
+
+            <li class = "box project">
+              <img class = "box pictBottom" src = "images/nature.jpg" alt = "Photo of nature">
+              <a href = "">Nature</a>
             </li>
-            <li class = "">
-              <a href = "http://github.com/udasity/Bokeh">BOKEH</a>
+
+            <li class = "box project">
+              <img class = "box pictBottom" src = "images/shar.jpg" alt = "Photo of balloons">
+              <a href = "">Celebration</a>
             </li>
+
           </ul>
+
         </div>
-        </div>
+
       </div>
-    </body>
+
+    </div>
+
+  </body>
+
 </html>
