right on big screen

--- a/index.html
+++ b/index.html
@@ -8,36 +8,13 @@
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
     <link rel = "stylesheet" href = "css/main.css">
     <link rel = "stylesheet" href = "css/responsive.css">
+    <link href='http://fonts.googleapis.com/css?family=Roboto&subset=latin,cyrillic'rel='stylesheet' type='text/css'>
 
   </head>
 
   <body>
 
     <div class = "container">
-
-      <section class = "box navSmall">
-
-        <h4>Links</h4>
-
-        <ul class = "box list">
-
-          <li class = "">
-            <a href = "">News</a>
-          </li>
-
-          <li class = "">
-            <a href = "">Hobbies</a>
-          </li>
-
-          <li class = "">
-            <a href = "">Works</a>
-          </li>
-
-        </ul>
-
-      </section>
-
-      <div class = "container2">
 
         <section class = "box topBlock">
 
@@ -46,7 +23,8 @@
           </div>
 
           <div class = "box myName">
-            <h2>Anna Moskalchuk<br>FRONT-END-NINJA</h2>
+            <h3 class = "name">Anna Moskalchuk</h3>
+            <h5 class = "status">front-end ninja</h5>
           </div>
 
         </section>
@@ -64,18 +42,22 @@
           <ul class = "box listWorks">
 
             <li class = "box project">
-              <img class = "box pictBottom" src = "images/braslet.jpg" alt = "Photo of bracelets">
-              <a href = "">Hobby</a>
+              <img class = "box pictHobby" src = "images/braslet.jpg" alt = "Photo of bracelets">
+              <a href = "" class = "linkName">Hobby</a>
             </li>
 
-            <li class = "box project">
-              <img class = "box pictBottom" src = "images/nature.jpg" alt = "Photo of nature">
-              <a href = "">Nature</a>
-            </li>
+            <li class = "box project fild"></li>
 
             <li class = "box project">
-              <img class = "box pictBottom" src = "images/shar.jpg" alt = "Photo of balloons">
-              <a href = "">Celebration</a>
+              <img class = "box pictNature" src = "images/nature.jpg" alt = "Photo of nature">
+              <a href = "" class = "linkName">Nature</a>
+            </li>
+
+            <li class = "box project fild"></li>
+
+            <li class = "box project">
+              <img class = "box pictBalloons" src = "images/shar.jpg" alt = "Photo of balloons">
+              <a href = "" class = "linkName">Balloons</a>
             </li>
 
           </ul>
