for screen width: 1000px good looking

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
     <link rel = "stylesheet" href = "css/main.css">
     <link rel = "stylesheet" href = "css/responsive.css">
-    <link href='http://fonts.googleapis.com/css?family=Roboto&subset=latin,cyrillic'rel='stylesheet' type='text/css'>
+    <link href = "http://fonts.googleapis.com/css?family=Roboto&subset=latin,cyrillic" rel = "stylesheet" type = "text/css">
 
   </head>
 
@@ -16,53 +16,51 @@
 
     <div class = "container">
 
-        <section class = "box topBlock">
+      <section class = "box topBlock">
 
-          <div class = "box logo">
-            <img class = "imgLogo" src = "images/logoUdacity.svg" alt = "Logo Udasity">
-          </div>
-
-          <div class = "box myName">
-            <h3 class = "name">Anna Moskalchuk</h3>
-            <h5 class = "status">front-end ninja</h5>
-          </div>
-
-        </section>
-
-        <div class = "box imageCenter">
-          <img class = "box backImg" src = "images/flowers.jpg" alt = "Background picture">
+        <div class = "box logo">
+          <img class = "imgLogo" src = "images/logoUdacity.svg" alt = "Logo Udasity">
         </div>
 
-        <div class = "box work">
-          <h3 class = "work">Featured Work</h3>
+        <div class = "box myName">
+          <h3 class = "name">Anna Moskalchuk</h3>
+          <h5 class = "status">front-end ninja</h5>
         </div>
 
-        <div class = "box bottomLinks">
+      </section>
 
-          <ul class = "box listWorks">
+      <div class = "box imageCenter">
+        <img class = "box backImg" src = "images/flowers.jpg" alt = "Background picture">
+      </div>
 
-            <li class = "box project">
-              <img class = "box pictHobby" src = "images/braslet.jpg" alt = "Photo of bracelets">
-              <a href = "" class = "linkName">Hobby</a>
-            </li>
+      <div class = "box work">
+        <h3 class = "work">Featured Work</h3>
+      </div>
 
-            <li class = "box project fild"></li>
+      <div class = "box bottomLinks">
 
-            <li class = "box project">
-              <img class = "box pictNature" src = "images/nature.jpg" alt = "Photo of nature">
-              <a href = "" class = "linkName">Nature</a>
-            </li>
+        <ul class = "box listWorks">
 
-            <li class = "box project fild"></li>
+          <li class = "box project">
+            <img class = "box pictHobby" src = "images/braslet.jpg" alt = "Photo of bracelets">
+            <a href = "" class = "linkName">Hobby</a>
+          </li>
 
-            <li class = "box project">
-              <img class = "box pictBalloons" src = "images/shar.jpg" alt = "Photo of balloons">
-              <a href = "" class = "linkName">Balloons</a>
-            </li>
+          <li class = "box project fild"></li>
 
-          </ul>
+          <li class = "box project">
+            <img class = "box pictNature" src = "images/nature.jpg" alt = "Photo of nature">
+            <a href = "" class = "linkName">Nature</a>
+          </li>
 
-        </div>
+          <li class = "box project fild"></li>
+
+          <li class = "box project">
+            <img class = "box pictBalloons" src = "images/shar.jpg" alt = "Photo of balloons">
+            <a href = "" class = "linkName">Balloons</a>
+          </li>
+
+        </ul>
 
       </div>
 
