--- a/index.html
+++ b/index.html
@@ -29,13 +29,28 @@
 
       </section>
 
-      <div class = "box imageCenter">
-        <img class = "box backImg" src = "images/flowers.jpg" alt = "Background picture">
-      </div>
+      <ul class = "box image listWorks">
+
+        <li class = "box center me">
+          <img class = "box meImg" src = "images/me.jpg" alt = "Background picture">
+        </li>
+
+        <li class = "box center fildS"></li>
+
+        <li class = "box center resume">
+          <img class = "box backImg" src = "images/code.jpg" alt = "Picture of code">
+        </li>
+
+      </ul>
 
       <div class = "box work">
         <h3 class = "work">Featured Work</h3>
       </div>
+
+      <div class = "box sentence">
+        <h3>The time for action is now.<br>It’s never too late to do something.</h3>
+      </div>
+
 
       <div class = "box bottomLinks">
 
@@ -57,7 +72,7 @@
 
           <li class = "box project">
             <img class = "box pictBalloons" src = "images/shar.jpg" alt = "Photo of balloons">
-            <a href = "" class = "linkName">Balloons</a>
+            <a href = "" class = "linkName">Joy</a>
           </li>
 
         </ul>
