all context visible on mobile devises

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 
   <head>
@@ -35,7 +35,7 @@
           <img class = "box meImg" src = "images/me.jpg" alt = "Background picture">
         </li>
 
-        <li class = "box center fildS"></li>
+        <li class = "box center fildC"></li>
 
         <li class = "box center resume">
           <img class = "box backImg" src = "images/code.jpg" alt = "Picture of code">
@@ -43,12 +43,12 @@
 
       </ul>
 
-      <div class = "box work">
+      <article class = "box work">
         <h3 class = "work">Featured Work</h3>
-      </div>
+      </article>
 
       <div class = "box sentence">
-        <h3>The time for action is now.<br>It’s never too late to do something.</h3>
+        <p>The time for action is now.<br>It’s never too late to do something.</p>
       </div>
 
 
