--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
           <img class = "box meImg" src = "images/me.jpg" alt = "Background picture">
         </li>
 
-        <li class = "box center fildC"></li>
-
         <li class = "box center resume">
           <img class = "box backImg" src = "images/code.jpg" alt = "Picture of code">
         </li>
@@ -61,14 +59,10 @@
             <a href = "" class = "linkName">Hobby</a>
           </li>
 
-          <li class = "box project fild"></li>
-
-          <li class = "box project">
+          <li class = "box project space">
             <img class = "box pictNature" src = "images/nature.jpg" alt = "Photo of nature">
             <a href = "" class = "linkName">Nature</a>
           </li>
-
-          <li class = "box project fild"></li>
 
           <li class = "box project">
             <img class = "box pictBalloons" src = "images/shar.jpg" alt = "Photo of balloons">
